client/stylesheets/nav.css
.navbar-pageTitle {
    margin-left: -20px !important;
}

#hackathon-nav a {
	border-radius: 100px;
	font-size: 40pt;
	height: 100px;
	width: 100px;
	text-align: center;
	vertical-align: middle;
}

#notifications-trigger.has-notifications {
	color: orange;
}

#notifications-dropdown>li>a:hover, #notifications-dropdown>li>a:focus {
	background: transparent;
}

#notifications-dropdown {
	max-height: 250px;
	overflow: auto;
}

